--- a/Final exam/static/style.css
+++ b/Final exam/static/style.css
@@ -1,3 +1,12 @@
-h1 {
+h1{
     color: darkgreen;
 }
+
+.content{
+    width: 100%;
+    max-width: 1720px;
+    background-color: white;
+    margin: auto;
+    padding-left: 0px;
+    padding-right: 20px;
+  }
