--- a/Final exam/templates/edit.html
+++ b/Final exam/templates/edit.html
@@ -27,12 +27,12 @@
     <section>
         <h2> What's in your mind ?</h2>
     
-        <form action="/add" method="post">
+        <form action="/update" method="post">
             <label>Title</label><br/>
             <input type="text" name="title"><br/>
             <label>Content</label><br>
             <textarea id cols="30" rows="10" name="content"></textarea><br/><br/>
-            <button type="submit">Add new blog</button>
+            <button type="submit">Save</button>
 
         </div>
         {% if error %}
@@ -43,7 +43,7 @@
     </section>
 
     <section>
-        <h1>All blogs</h1>
+    
     
         <!--{#-->
         <!--Jinja template-->
@@ -53,28 +53,7 @@
     
         
 
-        <div class="list-posts"> 
-            {% if not blogs %}
-                <p>Không có bất kỳ bài post nào trong CSDL</p>
-            {% endif %}
-            
-            {% for blog in blogs %}
-            <hr>
-            <div class="post">
-                <div class="post-header">
-                    <p class="post-at">Post at: {{blogs["created_time"]}}</p>
-                </div>
-        
-                <div class="post-detail">
-                    <h3 class="post-title"> Title: {{ blogs["title"] }}</h3>
-                    <p class="post-detail"> Content: {{blogs["content"]}}</p>
-                    <a href="/edit">Edit this post</a>
-                </div>
-            </div>  
-            
-            {% endfor %}                       
-             
-        </div>
+       
     
     
     
