--- a/Final exam/templates/index.html
+++ b/Final exam/templates/index.html
@@ -62,12 +62,12 @@
             <hr>
             <div class="post">
                 <div class="post-header">
-                    <p class="post-at">Post at: {{blogs["created_time"]}}</p>
+                    <p class="post-at">Post at: {{blog[3]}}</p>
                 </div>
         
                 <div class="post-detail">
-                    <h3 class="post-title"> Title: {{ blogs["title"] }}</h3>
-                    <p class="post-detail"> Content: {{blogs["content"]}}</p>
+                    <h3 class="post-title"> Title: {{ blog[1] }}</h3>
+                    <p class="post-detail"> Content: {{blog[2]}}</p>
                     <a href="/edit">Edit this post</a>
                 </div>
             </div>  
