--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -19,7 +19,7 @@
             <ul class="ul">
                 <li class="list"><a class="menu" href="/">Blogs</a></li>
                 <li class="list"><a class="menu" href="/about">About</a></li>
-                <li class="list"><a class="menu" href="/resignation">Resignation Letter</a></li>
+                <li class="list"><a class="menu" href="/resignation-letter">Resignation Letter</a></li>
             </ul>
         </nav>
     </header>
