--- a/Final exam/templates/edit.html
+++ b/Final exam/templates/edit.html
@@ -27,7 +27,7 @@
     <section>
         <h2> What's in your mind ?</h2>
     
-        <form action="/{{blog[0]}" method="post">
+        <form action="/post/{{post[0]}}" method="post">
             <label>Title</label><br/>
             <input type="text" name="title" value="{{post[1]}}"><br/>
             <label>Content</label><br>
